@@ -3,7 +3,6 @@
  - update documentation
  - automated testsuite
  - dircproxy-config-to-ctrlproxyrc script
- - add NICK to repl_* in repl_highlight, repl_lastdisconnect
  - dcc module
  - socket: finish gnutls support
 
